--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,6 +2,11 @@
     <string name="app_name">My Application</string>
     <string name="action_settings">Settings</string>
     <string name="imgdesc">imgdesc</string>
+    <string name="serverTitle">Сервер</string>
+    <string name="serverSummary">адрес сервера</string>
+    <string name="emailSummary">тратата</string>
+    <string name="emailTitle">трулялял</string>
+    <string name="title_activity_settings">Settings</string>
 
     <string-array name="titles">
         <item>Home</item>
